# AutoTech-Backend

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: README  env.py
alembic/versions/: 001_initial.py  002_sync_schema.py  0b1f2e984b23_add_user_roles_pivot_table.py  17d84f77383b_add_workshop_bank_accounts_mobile_.py  6dcc7e96923f_add_user_payment_accounts_table.py  70489c937aeb_add_vehicle_id_and_mileage_to_part_.py  8974be621000_add_carts_cart_items_vehicle_id_mileage_.py  d3e0bdf517ef_init.py  f69dbaeed5ca_add_part_category_installment_min_.py
scripts/: seed_admin.py
src/: main.py  seed.py
src/config/: database.py  models.py  server.py  settings.py
src/core/: config.py  database.py
src/core/application/: base_response.py  pagination.py
src/core/domain/: entity.py  repository.py  transaction.py
src/core/infrastructure/: mapper.py  sql_repository.py  transaction.py
src/modules/admin/infrastructure/: router.py
src/modules/cart/application/: create.py
src/modules/cart/domain/: entity.py
src/modules/cart/infrastructure/: mapper.py  repository.py  router.py  service.py
src/modules/credit/application/: create.py
src/modules/credit/domain/: entity.py
src/modules/credit/infrastructure/: repository.py  router.py  service.py
src/modules/orders/application/: create.py
src/modules/orders/domain/: entity.py
src/modules/orders/infrastructure/: bcv.py  mapper.py  repository.py  router.py  service.py
src/modules/parts/application/: create.py
src/modules/parts/domain/: entity.py  types.py
src/modules/parts/infrastructure/: mapper.py  repository.py  router.py  service.py
src/modules/payments/application/: create.py
src/modules/payments/domain/: entity.py  types.py
src/modules/payments/infrastructure/: mapper.py  repository.py  router.py  service.py
src/modules/services/domain/: entity.py
src/utils/: add_routers.py  email.py  email_templates.py  file_upload.py  handle_service_result.py  venezuelan_validators.py
tests/: conftest.py  test_credit.py  test_orders.py  test_services.py  test_users.py
(+32 files in other folders)
