[project]
name = "autotech-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Landaeta",email = "dev.jorge2003@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
